gdb/cli/cli-interp.h
@@ -42,6 +42,7 @@ private:
     ui_file *targ;
     ui_file *targerr;
     ui_file_up tee_to_delete;
+    ui_file_up stderr_to_delete;
     ui_file_up file_to_delete;
     ui_file_up log_to_delete;
   };
